--- a/p8105_hw5_rsb2204.Rmd
+++ b/p8105_hw5_rsb2204.Rmd
@@ -76,3 +76,86 @@ geom_errorbar(aes(ymin=conf.low, ymax=conf.high))
 ```
 
 From the plot we see that Tulsa has the lowest proportion of unsolved homicides while Chicago has the highest proportion of unsolved homicides.
+
+## Problem 3
+Setting the design elements
+```{r}
+n = 30
+sigma = 5
+mu = 0
+```
+
+Writing a function to generate datasets from the model and conducting a simulation to explore power in a one-sample t-test:
+
+```{r}
+onesamp_test = function(n=30, mu, sigma = 5){
+  sim_data = tibble(
+    x = rnorm(n, mean=mu, sd=sigma)
+  )
+  
+  t_test = t.test(sim_data, conf.level = 0.95) %>%
+    broom::tidy()
+}
+
+```
+
+Conducting the tests for $\mu=0$
+```{r}
+sim_results_df = 
+  expand_grid(
+    sample_size = 30,
+    mu = 0,
+    iter = 1:10
+  ) %>% 
+  mutate(
+    estimate_df = map2(sample_size,mu, onesamp_test)
+  ) %>% 
+  unnest(estimate_df)
+
+sim_results_df
+```
+
+Now repeating the above for $\mu={1,2,3,4,5,6}$:
+```{r}
+sim_results_df2 = 
+  expand_grid(
+    sample_size = 30,
+    mu = c(1,2,3,4,5),
+    iter = 1:10
+  ) %>% 
+  mutate(
+    estimate_df = map2(.x=sample_size,.y=mu, ~onesamp_test(n = .x, mu =.y))
+  ) %>% 
+  unnest(estimate_df)
+
+sim_results_df2
+```
+
+Making a plot showing the proportion of times the null was rejected on the y axis and the true value of $\mu$ on the x axis:
+```{r}
+sim_results_df2 %>%
+  group_by(mu) %>%
+  filter(p.value < 0.05) %>%
+  summarize(proportion = n()) %>%
+  ggplot(aes(x=mu, y=proportion/5000))+
+  geom_point()+
+  labs(x = "True value of mu",
+       y = "Power of the test",
+       title= "Association between effct size and power")
+```
+
+
+Make a plot showing the average $\hat{\mu}$ on the y-axis and the true value of $\mu$ on the x axis, and overlay the average estimate of $\hat{\mu}$ only in samples for which the null was rejected:
+```{r}
+sim_results_df2 %>%
+  group_by(mu, estimate) %>%
+  ggplot(aes(x=mu, y=mean(estimate)))+
+  geom_point()+
+  labs(x = "True value of mu",
+       y = "Average estimate of mu_hat")
+```
+
+
+
+
+
