--- a/p8105_hw5_rsb2204.md
+++ b/p8105_hw5_rsb2204.md
@@ -213,7 +213,8 @@ victim.
 
 ``` r
 homicide_data = read_csv("data/homicide-data.csv") %>%
-  mutate(city_state = str_c(city,    state, sep=", "),unsolved = ifelse((disposition=="Closed without arrest" | disposition =="Open/No arrest"), 1, 0)) 
+  mutate(city_state = str_c(city,    state, sep=", "),unsolved = ifelse((disposition=="Closed without arrest" | disposition =="Open/No arrest"), 1, 0)) %>%
+  mutate(city_state = replace(city_state, city_state == "Tulsa, AL", "Tulsa, OK"))
 ```
 
     ## Rows: 52179 Columns: 12
@@ -283,9 +284,20 @@ knitr::kable()
 | St. Louis, MO      |  1677 |      905 |
 | Stockton, CA       |   444 |      266 |
 | Tampa, FL          |   208 |       95 |
-| Tulsa, AL          |     1 |        0 |
-| Tulsa, OK          |   583 |      193 |
+| Tulsa, OK          |   584 |      193 |
 | Washington, DC     |  1345 |      589 |
+
+While creating the `city_state` variable I noticed that one of the rows
+seems to have an incorrect state column value of “AL” - Alabama for the
+city of Tulsa, which is actually in Oklahoma. To combat this issue,
+after creating the `city_state` variable using str_c() to concatenate
+the strings. We additionally create a binary variable of `unsolved` to
+determine the number of unsolved homicides which are coded as “Closed
+without arrest” and “Open/No arrest”.
+
+To create the table of the number of cities with the total number of
+homicides and number of unsolved homicides, we used the grouped by the
+`city_state` variable and used the summarize function.
 
 Estimating the proportion of homicides that are unsolved:
 
@@ -304,7 +316,7 @@ baltimore = homicide_data %>%
     ## 1    0.646    0.628     0.663
 
 Hence the estimated proportion is 0.646, the confidence interval for the
-proportion for the city of Baltimore, MD.
+proportion for the city of Baltimore, MD is (0.628, 0.663).
 
 Running `prop.test` function to estimate the proportion of homicides,
 that are unsolved for each city.
@@ -367,12 +379,15 @@ knitr::kable()
 | St. Louis, MO      | 0.5396541 | 0.5154369 | 0.5636879 |
 | Stockton, CA       | 0.5990991 | 0.5517145 | 0.6447418 |
 | Tampa, FL          | 0.4567308 | 0.3881009 | 0.5269851 |
-| Tulsa, AL          | 0.0000000 | 0.0000000 | 0.9453792 |
-| Tulsa, OK          | 0.3310463 | 0.2932349 | 0.3711192 |
+| Tulsa, OK          | 0.3304795 | 0.2927201 | 0.3705039 |
 | Washington, DC     | 0.4379182 | 0.4112495 | 0.4649455 |
 
+The above table uses prop.test for each city and displays the proportion
+of unsolved homicides and the confidence intervals for each.
+
 Creating a plot for the estimates and CI’s for each city, organizing the
-cities according to the proportion of unsolved homicides:
+cities according to the proportion of unsolved homicides (using
+fct_reorder):
 
 ``` r
 city_state %>%
@@ -388,8 +403,8 @@ geom_errorbar(aes(ymin=conf.low, ymax=conf.high))
 
 <img src="p8105_hw5_rsb2204_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
 
-From the plot we see that Tulsa has the lowest proportion of unsolved
-homicides while Chicago has the highest proportion of unsolved
+From the plot we see that Richmond, VA has the lowest proportion of
+unsolved homicides while Chicago has the highest proportion of unsolved
 homicides.
 
 ## Problem 3
@@ -423,31 +438,13 @@ sim_results_df =
   expand_grid(
     sample_size = 30,
     mu = 0,
-    iter = 1:10
+    iter = 1:5000
   ) %>% 
   mutate(
     estimate_df = map2(sample_size,mu, onesamp_test)
   ) %>% 
   unnest(estimate_df)
-
-sim_results_df
 ```
-
-    ## # A tibble: 10 × 11
-    ##    sample_s…¹    mu  iter estim…² stati…³ p.value param…⁴ conf.…⁵ conf.…⁶ method
-    ##         <dbl> <dbl> <int>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr> 
-    ##  1         30     0     1   0.757   0.660 0.514        29  -1.59    3.10  One S…
-    ##  2         30     0     2  -0.850  -0.990 0.331        29  -2.61    0.907 One S…
-    ##  3         30     0     3   0.118   0.108 0.915        29  -2.12    2.36  One S…
-    ##  4         30     0     4   1.21    1.17  0.253        29  -0.914   3.34  One S…
-    ##  5         30     0     5   2.32    3.30  0.00255      29   0.882   3.75  One S…
-    ##  6         30     0     6   0.876   1.07  0.295        29  -0.803   2.55  One S…
-    ##  7         30     0     7   0.771   0.961 0.344        29  -0.869   2.41  One S…
-    ##  8         30     0     8  -0.966  -1.14  0.264        29  -2.70    0.768 One S…
-    ##  9         30     0     9   0.566   0.618 0.541        29  -1.31    2.44  One S…
-    ## 10         30     0    10   0.115   0.130 0.898        29  -1.69    1.92  One S…
-    ## # … with 1 more variable: alternative <chr>, and abbreviated variable names
-    ## #   ¹​sample_size, ²​estimate, ³​statistic, ⁴​parameter, ⁵​conf.low, ⁶​conf.high
 
 Now repeating the above for $\mu={1,2,3,4,5,6}$:
 
@@ -456,32 +453,13 @@ sim_results_df2 =
   expand_grid(
     sample_size = 30,
     mu = c(1,2,3,4,5),
-    iter = 1:10
+    iter = 1:5000
   ) %>% 
   mutate(
     estimate_df = map2(.x=sample_size,.y=mu, ~onesamp_test(n = .x, mu =.y))
   ) %>% 
   unnest(estimate_df)
-
-sim_results_df2
 ```
-
-    ## # A tibble: 50 × 11
-    ##    sample_s…¹    mu  iter estim…² stati…³ p.value param…⁴ conf.…⁵ conf.…⁶ method
-    ##         <dbl> <dbl> <int>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr> 
-    ##  1         30     1     1   0.441   0.537  0.595       29  -1.24     2.12 One S…
-    ##  2         30     1     2   1.75    1.77   0.0875      29  -0.274    3.77 One S…
-    ##  3         30     1     3  -0.237  -0.249  0.805       29  -2.18     1.71 One S…
-    ##  4         30     1     4   1.49    1.55   0.132       29  -0.476    3.46 One S…
-    ##  5         30     1     5   1.44    1.64   0.112       29  -0.359    3.24 One S…
-    ##  6         30     1     6   0.830   0.929  0.361       29  -0.998    2.66 One S…
-    ##  7         30     1     7   0.619   0.692  0.495       29  -1.21     2.45 One S…
-    ##  8         30     1     8   0.753   0.889  0.381       29  -0.979    2.48 One S…
-    ##  9         30     1     9   1.18    1.24   0.225       29  -0.762    3.11 One S…
-    ## 10         30     1    10   1.52    1.61   0.119       29  -0.414    3.46 One S…
-    ## # … with 40 more rows, 1 more variable: alternative <chr>, and abbreviated
-    ## #   variable names ¹​sample_size, ²​estimate, ³​statistic, ⁴​parameter, ⁵​conf.low,
-    ## #   ⁶​conf.high
 
 Making a plot showing the proportion of times the null was rejected on
 the y axis and the true value of $\mu$ on the x axis:
@@ -490,8 +468,8 @@ the y axis and the true value of $\mu$ on the x axis:
 sim_results_df2 %>%
   group_by(mu) %>%
   filter(p.value < 0.05) %>%
-  summarize(proportion = n()/5000) %>%
-  ggplot(aes(x=mu, y=proportion))+
+  summarize(prop = n()/5000) %>%
+  ggplot(aes(x=mu, y=prop))+
   geom_point()+
   geom_smooth(method="lm", se=FALSE)+
   labs(x = "True value of mu",
@@ -504,9 +482,12 @@ sim_results_df2 %>%
 <img src="p8105_hw5_rsb2204_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
 
 From the plot we see that there is a positive linear relationship
-between the true value of $\mu$ and the power. The effect size measures
-the strength of the relationship between variables in a population. As
-the effect size increase, the power of the test increases.
+between the true value of $\mu$ and the power and we see that as the
+value of $\mu$ increases the power of the test is close to 1, which
+indicates that the hypothesis test is good at detecting a false null
+hypothesis. This indicates The effect size measures the strength of the
+relationship between variables in a population. As the effect size
+increase, the power of the test increases.
 
 Make a plot showing the average $\hat{\mu}$ on the y-axis and the true
 value of $\mu$ on the x axis, and overlay the average estimate of
@@ -514,11 +495,23 @@ $\hat{\mu}$ only in samples for which the null was rejected:
 
 ``` r
 sim_results_df2 %>%
-  group_by(mu, estimate) %>%
-  ggplot(aes(x=mu, y=mean(estimate)))+
+  group_by(mu) %>%
+  summarize(est_mu = mean(estimate))%>%
+  ggplot(aes(x=mu, y=est_mu))+
   geom_point()+
+geom_point(data=sim_results_df2%>%filter(p.value < 0.05)%>% group_by(mu) %>% summarize(est_mu = mean(estimate)), color="red")+
   labs(x = "True value of mu",
-       y = "Average estimate of mu_hat")
+       y = "Average estimate of mu_hat", main="Estimated Average Mean vs True Mean")
 ```
 
 <img src="p8105_hw5_rsb2204_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+
+The sample average $\hat{\mu}$ value across tests for which the null is
+rejected is approximately equal to the true value of $\mu$ for larger
+values of $\mu$, which aligns with our reasoning that increases in
+effect size cause increases in power of a test. Though we do see that in
+the case of smaller $\mu$ values of 1, 2, 3, the estimates for which the
+null is rejected are slightly overestimating the value of the true
+$\mu$, this is due to the fact that these values have a smaller power
+value, and hence a smaller probability of successfully reject the null
+hypothesis.
